@@ -202,10 +202,7 @@ int TtkScrollviewCommand(
 	Tcl_SetObjResult(interp, Tcl_NewListObj(2, result));
 	return TCL_OK;
     } else if (objc == 3) {
-	const char *string = Tcl_GetString(objv[2]);
-	if (strcmp(string, "end") == 0) {
-	    newFirst = s->total;
-	} else if (Tcl_GetIntFromObj(interp, objv[2], &newFirst) != TCL_OK) {
+	if (Tcl_GetIntFromObj(interp, objv[2], &newFirst) != TCL_OK) {
 	    return TCL_ERROR;
 	}
     } else {
